# Xplor

./: CMakeLists.txt  README.md
include/: camera.hpp  component.hpp  component_array.hpp  component_manager.hpp  engine_manager.hpp  entity_manager.hpp  game_object.hpp  generator_geometry.hpp  geometry.hpp  gl_error_check.hpp  manager.hpp  matrix_stack.hpp  render_system.hpp  shader.hpp  shader_manager.hpp  system.hpp  system_manager.hpp  test.json  transform_component.hpp  window_manager.hpp  xplor_types.hpp
resources/shaders/: bounding_color.fs  flatColor.fs  gizmo.fs  gizmo.vs  select.fs  simple.fs  simple.vs  simpleOneTex.fs
source/: camera.cpp  component.cpp  component_array.cpp  component_manager.cpp  engine_manager.cpp  entity_manager.cpp  game_object.cpp  imgui.ini  main.cpp  render_system.cpp  shader.cpp  shader_manager.cpp  system_manager.cpp  window_manager.cpp
